--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="text-container">
         <p>published 24 jun 2024</p>
   
-        <h2>HTML & CSS foundantions</h2>
+        <h2 class="text-container__hover">HTML & CSS foundantions</h2>
     
         <p class="text-container__p">These languages are the backbone of every website.
           defining structure, content and presentation</p>
